--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,11 +1,5 @@
 # Welcome to the FTCC Handbook
  
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
+Welcome to the FTCC Handbook. This is provided mainly as a reference for FTCC members.
 
-## What is Nextra?
-
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
-
-## Documentation
-
-The documentation is available at [https://nextra.site](https://nextra.site).
+## Useful links
