--- a/pages/about/organisation.mdx
+++ b/pages/about/organisation.mdx
@@ -25,7 +25,7 @@ Here are the main committees:
 3. Membership
 4. Partnerships and Networking
 5. Marketing, Media and Engagments
-6. Organisational Development
+6. Institional Development
 
 ## Special Committees
 
@@ -35,7 +35,7 @@ Here are our current special committees:
 
 1. Students Welfare Committee
 2. Forum for Women in Tech
-3. Leisure, Entertainment and Socials Committee
+3. Entertainment and Socials Committee
 
 ## We need more leaders. Want to volunteer in a role?
 
