--- a/pages/committees/finance.mdx
+++ b/pages/committees/finance.mdx
@@ -6,8 +6,12 @@ Welcome to the finance committee documentation page.
 
 The finance committee is responsible for all the financial aspects of the organisation which includes:
 
-1. Keeps track of the financial transactions
-2. Maintains the organisation's bank account
-3. Receives money from organisation business including membership fees, donations, grants, merch sales, event registrations and others
-4. Disburses money for organisational expenses
-5. Works with other committees to tap potential access to grants from various funding sources
+1. Keeps track of the financial transactions.
+2. Maintains the organisation's bank account.
+3. Receives money from organisation business including membership fees, donations, grants, merch sales, event registrations and others.
+4. Disburses money for organisational expenses.
+5. Works with other committees to tap potential access to grants from various funding sources.
+
+## Who are the members of the finance committee?
+
+The members of this committee are listed in the [organisational chart ↗](/about/leadership).
