--- a/pages/special-committees/entertainment-and-socials.mdx
+++ b/pages/special-committees/entertainment-and-socials.mdx
@@ -1,6 +1,6 @@
-# Students Welfare Committee
+# Entertainment and Socials Committee
 
-This is the students welfare committee page!
+This is the entertainment and socials committee page!
 
 
 ## Who are the members of the finance committee?
