--- a/pages/special-committees/women-in-tech.mdx
+++ b/pages/special-committees/women-in-tech.mdx
@@ -1,3 +1,8 @@
 # Women in Tech
 
 This is the Women in Tech committee page!
+
+
+## Who are the members of the finance committee?
+
+The members of this committee are listed in the [organisational chart ↗](/about/leadership).
