md table sample

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -3,3 +3,8 @@
 Welcome to the FTCC Handbook. This is provided mainly as a reference for FTCC members.
 
 ## Useful links
+
+| Syntax      | Description |
+| ----------- | ----------- |
+| Header      | Title       |
+| Paragraph   | Text        |
