useful links wip

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -4,7 +4,13 @@ Welcome to the FTCC Handbook. This is provided mainly as a reference for FTCC me
 
 ## Useful links
 
-| Syntax      | Description |
+| Websites      | URL |
 | ----------- | ----------- |
-| Header      | Title       |
-| Paragraph   | Text        |
+| Official      | https://ftcc.org.au |
+| FTCC Handbook   | https://ftcc-handbook.vercel.app       |
+
+| Social Media      | Acccount |
+| ----------- | ----------- |
+| Facebook      | https://facebook.com/FiloTechCanberra |
+| LinkedIn   | https://www.linkedin.com/company/filotechcanberra/        |
+| GitHub   | https://github.com/ftcc-devs        |
