about menu setup

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,6 +1,16 @@
 # Welcome to the FTCC Handbook
  
-Welcome to the FTCC Handbook. This is provided mainly as a reference for FTCC members.
+```html filename="hello-world.js" {3} copy
+const greeting = 'Hello, world!';
+
+console.log(greeting);
+```
+
+Welcome to the FTCC Handbook!
+
+This resource is provided for FTCC leaders and members as official repository of institutional guides and references. 
+
+## Welcome Video
 
 ## Useful links
 
