open graph meta head

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -19,7 +19,7 @@ This resource is provided for FTCC leaders and members as official repository of
 | Official      | https://ftcc.org.au |
 | FTCC Handbook   | https://ftcc-handbook.vercel.app       |
 
-| Social Media      | Acccount |
+| Social Media      | Account |
 | ----------- | ----------- |
 | Facebook      | https://facebook.com/FiloTechCanberra |
 | LinkedIn   | https://www.linkedin.com/company/filotechcanberra/        |
