--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -6,9 +6,11 @@ const greeting = 'Hello, world!';
 console.log(greeting);
 ```
 
-Welcome to the FTCC Handbook!
+Welcome to the Canberra Filipino IT and Tech Professionals Community! We are thrilled to have you as a part of our organisation. This handbook is designed to provide you with important information about our community, its mission, values, and guidelines for participation.
 
-This resource is provided for FTCC leaders and members as official repository of institutional guides and references. 
+Essential FTCC resources and templates are also available in this website for easy access.
+
+Whether you're a seasoned IT professional or just starting out in the field, we hope you find our community to be a valuable resource for networking, learning, and professional growth.
 
 ## Welcome Video
 
