--- a/pages/about/vision-mission.mdx
+++ b/pages/about/vision-mission.mdx
@@ -1,9 +1,14 @@
+
 # Vision, Mission and Roadmap
 
 This is the about page!
 
 ## Vision
 
+
 ## Mission Statement
+
+To enable, support, and upskill Filipino ICT professionals in the ACT (Australia) and  represent Filipino professionals as highly-skilled and 
+globally competitive talents contributing to Australia’s efforts to become a top digital economy by 2030.
 
 ## Long-term Roadmap
