--- a/pages/committees/executive.mdx
+++ b/pages/committees/executive.mdx
@@ -1,11 +1,11 @@
-# Administration Committee
+# Executive Committee
 
 Welcome to the admin committee documentation page.
 
-## What does the admin committee do?
+## What does the Executive Committee do?
 
 1. The admin committee is central to the work of the whole executive team
 
 ## Who are the members of the finance committee?
 
-The members of this committee are listed in the [organisational chart ↗](/about/leadership).
+The members of this committee are listed in the [organisational chart ↗](/about/organisation).
