--- a/pages/committees/finance.mdx
+++ b/pages/committees/finance.mdx
@@ -14,4 +14,4 @@ The finance committee is responsible for all the financial aspects of the organi
 
 ## Who are the members of the finance committee?
 
-The members of this committee are listed in the [organisational chart ↗](/about/leadership).
+The members of this committee are listed in the [organisational chart ↗](/about/organisation).
