--- a/pages/committees/membership.mdx
+++ b/pages/committees/membership.mdx
@@ -9,4 +9,4 @@ Welcome to the membership committee documentation page.
 
 ## Who are the members of the finance committee?
 
-The members of this committee are listed in the [organisational chart ↗](/about/leadership).
+The members of this committee are listed in the [organisational chart ↗](/about/organisation).
