--- a/pages/committees/organisational-development.mdx
+++ b/pages/committees/organisational-development.mdx
@@ -8,4 +8,4 @@ Welcome to the institutional development committee documentation page.
 
 ## Who are the members of the finance committee?
 
-The members of this committee are listed in the [organisational chart ↗](/about/leadership).
+The members of this committee are listed in the [organisational chart ↗](/about/organisation).
