--- a/pages/special-committees/entertainment-and-socials.mdx
+++ b/pages/special-committees/entertainment-and-socials.mdx
@@ -5,4 +5,4 @@ This is the entertainment and socials committee page!
 
 ## Who are the members of the finance committee?
 
-The members of this committee are listed in the [organisational chart ↗](/about/leadership).
+The members of this committee are listed in the [organisational chart ↗](/about/organisation).
