--- a/pages/committees/marketing-media-and-engagements.mdx
+++ b/pages/committees/marketing-media-and-engagements.mdx
@@ -9,4 +9,4 @@ Welcome to the marketing, media and engagements committee documentation page.
 
 ## Who are the members of the finance committee?
 
-The members of this committee are listed in the [organisational chart ↗](/about/leadership).
+The members of this committee are listed in the [organisational chart ↗](/about/organisation).
